[app-builder] refactor: replace MCP client with LangChain4j MCP module